--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,8 @@
 {
-  "name": "Web Starter Kit",
-  "short_name": "WSK",
+
+  "name": "Push Notifications",
+  "gcm\_sender\_id": "351317597374",
+  "short_name": "Audi",
   "icons": [{
         "src": "images/touch/icon-128x128.png",
         "sizes": "128x128",
