--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
-sudo: false
 language: node_js
 node_js:
-  - iojs
-  - '0.12'
-  - '0.10'
-matrix:
-  allow_failures:
-    - node_js: iojs
+  - "4.1"
+  - "iojs"
+install:
+  - npm install
+script:
+  - npm test
