Add Express to handle pages

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "description": "My minimalistic personal website",
   "dependencies": {
+    "body-parser": "^1.14.2",
+    "express": "^4.13.3",
     "mime": "~1.2.7",
     "nodemailer": "~0.7.0"
   },
