Code Cov removed

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "body-parser": "^1.14.2",
     "codecov.io": "^0.1.6",
     "express": "^4.13.3",
+    "istanbul": "^0.4.1",
     "mime": "~1.2.7",
+    "mocha": "^2.3.4",
     "nodemailer": "~0.7.1"
   },
   "devDependencies": {
