Manifest titles update

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
 
-  "name": "Push Notifications",
+  "name": "Aditya Purandare",
   "gcm\_sender\_id": "351317597374",
   "short_name": "Audi",
   "icons": [{
