Add price elasticity submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "app/isysgroup3.github.io"]
 	path = app/isysgroup3.github.io
 	url = git@github.com:isysgroup3/isysgroup3.github.io.git
+[submodule "app/priceelasticitywebui"]
+	path = app/priceelasticitywebui
+	url = git@github.com:audip/priceelasticitywebui.git
